fix card on mobile

--- a/style.css
+++ b/style.css
@@ -169,10 +169,7 @@ html, body {
     font-size: 50px;
     padding: 30px 30px 0px 30px;
     text-align: center;
-
-   
 }
-
 
 
 #button-to-hide {
@@ -196,7 +193,7 @@ html, body {
 
 .card {
     background-color: white;
-    margin: 10px 50px 10px 50px;
+    margin: 100px 50px 10px 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -211,7 +208,7 @@ html, body {
     margin-right: 15px;
     display: flex;
     justify-content: center;
-    margin-top: -50px;
+    margin-top: -30px;
     border-radius: 5px;
     overflow: hidden;
 }
